2008-09-30  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting/PodcastService.cs:
	Every 10 minutes refresh any podcasts that haven't been updated in over an
	hour (BGO #508418).

2008-09-30  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Dap/Banshee.Dap/Banshee.Dap/DapSync.cs: Ensure that the Sync happens
	not on the main thread.  If you changed the Automatic Sync option, it
	woudl trigger a sync immediately, but that sync was happening on the GUI
	thread.

	* src/Dap/Banshee.Dap/Banshee.Dap.Gui/DapActions.cs: DapSync takes care of
	threading now, remove SpawnFromMain call here.

	* src/Core/Banshee.Services/Banshee.Base/ThreadAssist.cs: Add helper
	method AssertNotInMainThread useful for debugging.

2008-09-29  Aaron Bockover  <abock@gnome.org>

	Banshee 1.3.2 Released

2008-09-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Dap/Banshee.Dap/Banshee.Dap/DapSource.cs: Add SupportsVideo and
	SupportsPodcast bools with protected setters so subclasses can turn off
	the Video and Podcast child sources.

	* src/Dap/Banshee.Dap.Ipod/Banshee.Dap.Ipod/IpodSource.cs: Only enable
	video support (syncing and the child source) for devices that support it.
	Also don't sync playlists to iPod shuffle devices.  Give feedback about
	out-of-space errors.

	* src/Dap/Banshee.Dap/Banshee.Dap/DapSync.cs: Don't show/sync video if not
	supported.  Sync Music library first.  Improve/fix auto-syncing when you
	change your libraries it should work better now.

	* src/Dap/Banshee.Dap/Banshee.Dap/DapLibrarySync.cs: Delete playlists if
	they end up having no tracks when put on the device.

2008-09-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/XmlColumnController.cs:
	Allow setting the LongTitle in the xml.

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Data/PodcastSource.cs:
	* src/Extensions/Banshee.InternetRadio/Banshee.InternetRadio/InternetRadioSource.cs: